--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <input type="text" id="width" value="30'">
                 <div id="heightInputGroup">
                     <label for="height">Height (e.g., 10', 2", 1' 3"):</label>
-                    <input type="text" id="height" value="">
+                    <input type="text" id="height" value="10'">
                 </div>
                 <label for="spacing">Hole Spacing (inches):</label>
                 <input type="number" id="spacing" value="2.0" step="0.1" min="0.1">
@@ -47,17 +47,22 @@
             <div class="input-group">
                 <h2 class="collapsible-toggle">Advanced Options <span class="toggle-icon">+</span></h2>
                 <div class="collapsible-content">
+                    <p class="note">For rectangle shapes, the first hole's position is critical. Set your desired visible gap from the fitting edge here.</p>
                     <div class="grid-container">
                         <div>
                             <label for="insertLength">Insert Length (in):</label>
                             <input type="number" id="insertLength" value="1.5" step="0.01" min="0">
                         </div>
                         <div>
-                            <label for="drillOffset">Drill Offset (in):</label>
-                            <input type="number" id="drillOffset" value="0.25" step="0.01" min="0">
+                            <label for="visibleOffset">Desired Visible Offset (in):</label>
+                            <input type="number" id="visibleOffset" value="0.25" step="0.01" min="0">
+                        </div>
+                         <div>
+                            <label for="actualDrillOffset">Actual Drill Offset (in):</label>
+                            <input type="number" id="actualDrillOffset" readonly>
                         </div>
                         <div>
-                            <label for="straightLineStartOffset">Start Offset (in):</label>
+                            <label for="straightLineStartOffset">Start Offset (Straight Line):</label>
                             <input type="number" id="straightLineStartOffset" value="0.5" step="0.01" min="0">
                         </div>
                         <div>
@@ -139,7 +144,7 @@
 
             <h2>Visual Representation</h2>
             <canvas id="pvcCanvas" width="500" height="300"></canvas>
-             <p class="note canvas-note">Visual is a schematic and may not be to exact scale.</p>
+            <p class="note canvas-note">Visual is a schematic and may not be to exact scale.</p>
         </div>
     </div>
 
